Fix review findings: dropped allocator arg, over-narrow dtype guard
Four bugs and nine improvements from review of the Phase 3 memo.

Bugs:

1. The §4 pseudocode called mlx_vector_array_new_data(buf, n), dropping
   the SegmentAllocator first parameter (mlx_h.java:5471). That argument
   is the entire subject of the adjacent "must come from a confined
   Arena, never from the scope" paragraph -- passing scope there is the
   wrong-type delete it warns about -- so eliding it was the worst
   possible place to be imprecise. Now passes tmp, with the signature
   quoted inline.

2. The javadoc update list named four javadocs; six are falsified.
   Added MLX.java:119 (rank-2, contradicted by Decision 2), :203 ("no
   partial-permutation overload", contradicted by transpose(a, axes)),
   and :211-212 ("mirrors mlx_array_eval", contradicted by Decision 3).

3. matmul's dtype() == FLOAT32 guard recreated the exact defect this
   document exists to remove: native's rule is inexact types, so the
   guard was strictly narrower and would need relaxing the moment
   float16 lands in Phase 4. Replaced with DType.isInexact() checked on
   both operands. Also recorded why add/multiply/inner/outer have no
   dtype guard -- they call promote_types and accept int32, so there is
   no native rule there to mirror.

4. outer's overflow guard covered only a, with no evidence about b.
   Resolved by fetching upstream ops.cpp at the pinned tag: b goes
   through flatten(), which needs no int cast, so the one-sided guard is
   correct. Quoted the function so the asymmetry reads as deliberate.
   Noted the guard is untestable (needs an 8 GB array).

Improvements:

5. requireBroadcastableTo now requires non-negative target dims.
   broadcastTo(a[1], {-1}) passed the predicate via d1 == 1 and then
   passed the directional check too, since out_shape = a * b = -1 equals
   the target. Verified against the fetched broadcast_shapes source.
6. Specified slice's guards, previously unaddressed: lengt